# dissolve

./: .gitignore  CMakeLists.txt  CURRENT_BRANCH.txt  conanfile.txt
.azure-pipelines/: pr.yml
.azure-pipelines/templates/: code-quality-checks.yml
src/: main.cpp
src/base/: enumoptions.h  processpool.cpp  processpool.h
src/classes/: atomtype.h  atomtypedata.cpp  atomtypelist.cpp  atomtypelist.h  cell.h  configuration.cpp  configuration.h  configuration_contents.cpp  configuration_upkeep.cpp  data1dstore.cpp  data2dstore.cpp  data3dstore.cpp  empiricalformula.cpp  energykernel.cpp  grain.cpp  grain.h  isotopologuecollection.cpp  isotopologues.cpp  isotopologueset.cpp  isotopologueset.h  molecule.cpp  molecule.h  regionaldistributor.cpp  site.h  species.cpp  species.h  species_atomic.cpp  species_intra.cpp  species_io.cpp  species_transform.cpp  speciesintra.cpp  speciesintra.h  weights.cpp
src/data/: elements.cpp  ff.cpp  ff.h  ffangleterm.cpp  ffangleterm.h  ffbondterm.cpp  ffbondterm.h  fflibrary.cpp  fftorsionterm.cpp  fftorsionterm.h  formfactors.h
src/genericitems/: array.h  arrayvec3double.h  arrayvec3int.h  listhelper.h
src/gui/: CMakeLists.txt  addforcefieldtermswizard_funcs.cpp  datamanagerdialog_funcs.cpp  dataviewer_render.cpp  datawidget_funcs.cpp  getconfigurationnamedialog_funcs.cpp  getmodulelayernamedialog_funcs.cpp  getspeciesnamedialog_funcs.cpp  gui_funcs.cpp  (+20 more)
src/gui/models/: CMakeLists.txt  dataManagerReferencePointModel.cpp  dataManagerReferencePointModel.h  speciesAtomModel.cpp  speciesAtomModel.h
tests/: go-faster  go-faster-sub
(+66 files in other folders)
